--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,6 +13,29 @@ services:
         - "5432:5432"
     volumes:
       - postgres_catalog:/var/lib/postgressql/data/    
+ 
+
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWOR=postgres
+      - POSTGRES_DB=BasketDb
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    restart: always
+    ports:
+        - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgressql/data/    
+
+
+  distributuedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+      - "6379:6379"
+
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -24,6 +47,23 @@ services:
     ports:
       - "6000:8080"
       - "6060:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+    depends_on:
+      - basketdb 
+      - distributuedcache 
+    ports:
+      - "6001:8080"
+      - "6061:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
